@@ -36,6 +36,8 @@
         <label>database</label>
         <title>LevelDB</title>
 
+        <!-- Make use of native access during test execution only -->
+        <camel.surefire.fork.additional-vmargs>--enable-native-access=ALL-UNNAMED</camel.surefire.fork.additional-vmargs>
     </properties>
 
     <dependencies>
